--- a/angular/partials/phone-detail.html
+++ b/angular/partials/phone-detail.html
@@ -18,7 +18,14 @@
       <dd ng-repeat="availability in phone.availability">{{availability}}</dd>
     </dl>
   </li>
-    ...
+  <li>
+    <dl>
+      <dt>Infrared</dt>
+      <dd>{{phone.connectivity.infrared | checkmark}}</dd>
+      <dt>GPS</dt>
+      <dd>{{phone.connectivity.gps | checkmark}}</dd>
+    </dl>
+  </li>
   <li>
     <span>Additional Features</span>
     <dd>{{phone.additionalFeatures}}</dd>
